cursive-bootstrap/tests/ui/E-TYP/E-TYP-2502.cursive
// RUN: compile-fail
// DIAG: E-TYP-2502
// SPEC: 8.15
// DESC: Missing override on concrete procedure replacement

class Base {
    procedure method(~) -> i32 {
        return 0
    }
}

record Impl <: Base {
    value: i32
    procedure method(~) -> i32 {  //~ ERROR E-TYP-2502: missing override
        return ~.value
    }
}

public procedure main(move ctx: Context) -> i32 {
    return 0
}
